--- a/style/style.css
+++ b/style/style.css
@@ -92,11 +92,9 @@ i {
     display: flex;
     list-style-type: none;
 }
-.join_name .bank1 img{
+.join_name .bank li{
     border-radius: 7px;
-}
-.join_name .bank2 img{
-    border-radius: 7px;
+    padding-left: 20px;
 }
 p{
     padding-left: 70px;
