--- a/style/style.css
+++ b/style/style.css
@@ -94,8 +94,9 @@ i {
 }
 .join_name .bank li{
     border-radius: 7px;
-    padding-left: 20px;
+    padding-left: 10px;
 }
 p{
     padding-left: 70px;
+    position: absolute;
 }
