--- a/style/style.css
+++ b/style/style.css
@@ -94,9 +94,11 @@ i {
 }
 .join_name .bank1{
     padding-right: 40px;
+    position: absolute;
+    
 }
 .join_name .bank2{
-    padding-left: 20px;
+    padding-left: 15px;
 }
 .join_name .bank li{
     border-radius: 7px;
