--- a/style/style.css
+++ b/style/style.css
@@ -106,6 +106,6 @@ i {
     border-radius: 7px;
 }
 p{
-    padding: 50px 70px;
-    position: absolute;
+    padding: 70px;
+    color: #0A2BBE;
 }
